--- a/tests/locale/it.json
+++ b/tests/locale/it.json
@@ -1,1 +1,1 @@
-{"h1":{"original":"It's me,","translated":"Sono io,"},"p1":{"original":"Foo!","translated":"Pippo!"},"fanculo":{"original":"Geena","translated":"Gina"},"footer":{"original":"(c) Me","translated":"(c) Me","fuzzy":true}}
+{"H1":{"original":"It's me,","translated":"Sono io,"},"P1":{"original":"Foo!","translated":"Pippo!"},"FANCULO":{"original":"Geena","translated":"Gina"}}
