--- a/tests/locale/it.json
+++ b/tests/locale/it.json
@@ -1,1 +1,1 @@
-{"H1":{"original":"It's me,","translated":"Sono io,"},"P1":{"original":"Foo!","translated":"Pippo!"},"FANCULO":{"original":"Geena","translated":"Gina"}}
+{"H1":{"original":"It's me,","translated":"Sono io,"},"P1":{"original":"Foo!","translated":"Pippo!"},"FANCULO":{"original":"Geena","translated":"Gina"},"FOOTER":{"original":"(c) Me","translated":"(c) Me","fuzzy":true}}
